--- a/src/app/global.css
+++ b/src/app/global.css
@@ -47,7 +47,7 @@ a {
 .home_description {
   width: 60%;
   padding: 15px 5px 15px 5px;
-  font-size: 0.8em;
+  font-size: 2em;
   font-weight: bold;
   backdrop-filter: blur(2px);
   border-radius: 10px;
@@ -56,6 +56,8 @@ a {
 .link_introduction {
   backdrop-filter: blur(2px);
   padding: 5px 5px 0 5px;
+  font-size: 2em;
+  color: #872929;
   border-radius: 10px;
 }
 
@@ -64,7 +66,7 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  font-size: 0.3em;
+  font-size: 0.5em;
   background-size: cover;
   display: flex;
   background-color: var(--bacground-color-header);
