--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,5 +1,6 @@
 .header {
   width: 100%;
+  height: 7em;
   position: fixed;
   top: 0;
   left: 0;
@@ -11,6 +12,7 @@
 
 .logo {
   position: absolute;
+
   left: 0;
   top: 0;
   z-index: 1;
@@ -21,9 +23,9 @@
   justify-content: space-between;
   align-items: center;
   border: none;
-  width: 16rem;
-  height: 0.8em;
-  border-radius: 28px;
+  width: 38rem;
+  height: 3em;
+  border-radius: 35px;
   padding: 10px 10px 10px 20px;
   margin: 5px;
   background: #f5f3f3;
@@ -34,16 +36,18 @@
   border: none;
   background: transparent;
   outline: none;
+  font-size: 2em;
   height: 100%;
 }
 
 .search_input_tag {
-  border: none;
   background: transparent;
+  font-size: 1.6em;
   outline: none;
   padding: 3px;
   border: 1px solid black;
   width: 15%;
+  height: 100%;
 }
 
 .search_input::placeholder,
@@ -52,6 +56,7 @@
 }
 
 .search_icon:hover {
+  font-size: 3rem;
   cursor: pointer;
 }
 
@@ -59,6 +64,7 @@
   position: absolute;
   right: 0;
   top: 0;
+  font-size: 2.5em;
   text-align: center;
   font-weight: bold;
   padding: 3px 3px 0 0;
@@ -77,6 +83,7 @@
   outline: none;
   cursor: pointer;
   border: 1px solid #d0d2d6;
+  font-size: 2em;
   border-radius: 5px;
   user-select: none;
   background-color: #f6f1f1;
@@ -88,7 +95,7 @@
 .select_region option {
   background-color: #f5f5f5; /* Background color */
   color: #333; /* Text color */
-  font-size: 0.7em;
+
   padding: 3px; /* Padding around text */
   border-bottom: 1px solid #ddd; /* Bottom border for each option */
 }
