--- a/src/app/global.css
+++ b/src/app/global.css
@@ -100,4 +100,9 @@ footer img:hover {
   .link_introduction {
     text-align: center;
   }
+
+  .next_logo {
+    width: 72px;
+    height: 72px;
+  }
 }
