--- a/src/app/global.css
+++ b/src/app/global.css
@@ -89,7 +89,7 @@ footer img:hover {
   cursor: pointer;
 }
 
-@media screen and(width < 450) {
+@media screen and (max-width: 450px) {
   .home_description {
     width: 80%;
     font-size: 1em;
