--- a/src/components/bubble_chart.module.css
+++ b/src/components/bubble_chart.module.css
@@ -1,4 +1,12 @@
+.chart_container {
+  width: 100%;
+  height: auto;
+  position: relative;
+}
+
 .svg {
+  width: 100%;
+  height: 100%;
   background-size: cover;
   background-image: url("https://i.pinimg.com/originals/3f/93/9a/3f939af4dda1ec2988b9c6ce3bdb3886.jpg");
 }
